# encrypted-biometric-fusion

./: A_values.txt  B_values.txt  HEFT_train_voice_face.py  P_values.txt  README.md  ROC.py  ROC2.py  ROC_multi.py  classifier.py  data_generation.py  diagonal_encoding.py  encrypted_feature_fusion.cpp  encrypted_feature_fusion.py  encrypted_normalization.py  generate_random_P_values.py  linear_approximation.py  loss_values.txt  main.py  model.py  one_to_N.py  plot_generation.py  polynomial_approximation.py  rescale_p_matrix.py  taylor_series.py  test.py  time_data.txt  time_tests.py  train.py  train_cplfw_fingerprint.py  train_libri_other_cplfw.py  train_voice_face.py  train_voice_face_large.py  train_voice_face_medium.py  unencrypted_normalization.py
data/: 1approximate_best_P_value_transpose_lambda=0.01_margin=0.25_gamma=64_reg=0.txt  1approximate_best_P_value_transpose_lambda=0.01_margin=0.5_gamma=64_reg=0.txt  1approximate_best_P_value_transpose_lambda=0.01_margin=0.75_gamma=64_reg=0.txt  1approximate_best_P_value_transpose_lambda=0.01_margin=1.0_gamma=64_reg=0.txt  1approximate_best_P_value_transpose_lambda=0.1_margin=0.25_gamma=64_reg=0.txt  1approximate_best_P_value_transpose_lambda=0.1_margin=0.5_gamma=64_reg=0.txt  1approximate_best_P_value_transpose_lambda=0.1_margin=0.75_gamma=64_reg=0.txt  1approximate_best_P_value_transpose_lambda=0.1_margin=1.0_gamma=64_reg=0.txt  1approximate_best_P_value_transpose_lambda=0.25_margin=0.5_gamma=64_reg=0.txt  (+1333 more)
encrypted-operations/: 5_rotation.cpp  A_values.txt  (+8 more)
inference/: CMakeLists.txt  encrypted_feature_fusion.cpp
(+6276 files in other folders)
